--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Meetapp</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="settings_title">Preferencias</string>
+    <string name="settings_username_pholder"><![CDATA[<Username>]]></string>
+    <string name="chb_settings_notif_tareas">Recibir notificaciones cuando alguien finalize una tarea</string>
+    <string name="chb_settings_notif_horas">Notificar dos horas antes de un evento</string>
+    <string name="chb_settings_mostrar_eventos_pasados">Mostrar los eventos pasados</string>
+    <string name="guardar">Guardar</string>
 </resources>
