Crea fragmentos de Tareas, Participantes y Dividr Gastos
Es solo el layout mockupeado. Falta crear xml para inflar cada cosa
y tambien agregarle funcionalidad.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="chb_settings_notif_horas">Notificar dos horas antes de un evento</string>
     <string name="chb_settings_mostrar_eventos_pasados">Mostrar los eventos pasados</string>
     <string name="guardar">Guardar</string>
+    <string name="title_activity_evento">EventoActivity</string>
+    <string name="tareas_title">Tareas</string>
+    <string name="evento_name_pholder"><![CDATA[<Evento name>]]></string>
+    <string name="dividir_gastos_title">Dividir Gastos</string>
+    <string name="participantes_title">Participantes</string>
 </resources>
