--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">Meetapp</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_evento_form">EventoForm</string>
+    <string name="settings_title">Preferencias</string>
+    <string name="settings_username_pholder"><![CDATA[<Username>]]></string>
+    <string name="evento_title">Evento</string>
+    <string name="hint_nombre">Nombre</string>
+    <string name="hint_lugar">Lugar</string>
+    <string name="hint_fecha">Fecha</string>
+    <string name="guardar">Guardar</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
