--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,10 @@
     <string name="chb_settings_notif_tareas">Recibir notificaciones cuando alguien finalize una tarea</string>
     <string name="chb_settings_notif_horas">Notificar dos horas antes de un evento</string>
     <string name="chb_settings_mostrar_eventos_pasados">Mostrar los eventos pasados</string>
-    <string name="title_activity_evento_form">EventoForm</string>
     <string name="evento_title">Evento</string>
-    <string name="hint_nombre">Nombre</string>
-    <string name="hint_lugar">Lugar</string>
-    <string name="hint_fecha">Fecha</string>
+    <string name="nombre">Nombre</string>
+    <string name="lugar">Lugar</string>
+    <string name="fecha">Fecha</string>
     <string name="guardar">Guardar</string>
     <string name="cancelar">Cancelar</string>
     <string name="title_activity_evento">EventoActivity</string>
@@ -22,4 +21,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_guardar">Guardar</string>
 </resources>
