--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_guardar">Guardar</string>
+    <string name="title_activity_tarea_form">TareaForm</string>
+    <string name="tarea_title">Tarea</string>
+    <string name="titulo">Título</string>
+    <string name="encargado">Encargado</string>
+    <string name="descripcion">Descripción</string>
 </resources>
