Implementa context menu para edicion y borrado de eventos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="titulo">Título</string>
     <string name="encargado">Encargado</string>
     <string name="descripcion">Descripción</string>
+    <string name="texto_editar">Editar</string>
+    <string name="texto_borrar">Borrar</string>
 </resources>
