Agrega control de finalización de tareas para calcular pagos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="descripcion">Descripción</string>
     <string name="texto_editar">Editar</string>
     <string name="texto_borrar">Borrar</string>
+    <string name="tareas_sin_finalizar">Hay tareas sin finalizar!</string>
 </resources>
