Cambia layout de evento row y agrega ellipsize
Muestra la cantidad de organizadores y tareas en el listview de eventos.
Para mostrar un evento a partir de una LatLng se usa Geocoder para hacer reverse
geocoding.

Agrega atributo ellipsize al lugar en el evento row y a los participantes
en participante row para cortar el nombre si no entra y poner "..."

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="texto_borrar">Borrar</string>
     <string name="titulo_contactos">Contactos</string>
     <string name="contactos_title">Contactos</string>
+    <string name="crear_evento">Crear evento</string>
+    <string name="crear_tarea">Crear tarea</string>
 </resources>
