--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="success_division_info_msg">La división de gastos del evento ya ha sido realizada anteriormente.</string>
     <string name="alert_success_total_msg">Gastos totales:</string>
     <string name="alert_success_individual_msg">Gasto por Participante:</string>
+    <string name="agregar_gasto">Agregar gasto</string>
+    <string name="gastos_actuales_de_la_tarea">Gastos actuales de la tarea:</string>
 </resources>
