--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,19 @@
     <string name="agregar_gasto">Agregar gasto</string>
     <string name="gastos_actuales_de_la_tarea">Gastos actuales de la tarea:</string>
     <string name="no_hay_tareas_msg_error">Aún no hay tareas en el evento!</string>
+    <string name="permisos_contactos_dialog_title">Acceso a Contactos</string>
+    <string name="permisos_contactos_dialog_msg">La APP necesita acceso a sus contactos para que los pueda agregar como participantes a un evento</string>
+    <string name="dialog_borrar_pagos_title">¿Desea continuar?</string>
+    <string name="dialog_borrar_pagos_message">La división de gastos actual se eliminará.</string>
+    <string name="tarea_borrada">Tarea borrada</string>
+    <string name="tarea_editada">Tarea editada</string>
+    <string name="tarea_creada">Tarea creada</string>
+    <string name="no_se_agrego_gasto">No se pudo agregar el gasto</string>
+    <string name="tarea_no_borrada">La tarea no se borró</string>
+    <string name="tarea_no_editada">La tarea no se editó</string>
+    <string name="participante_no_borrado">Participante no borrado</string>
+    <string name="participante_borrado">Participante borrado</string>
+    <string name="evento_creado">Evento creado</string>
+    <string name="evento_editado">Evento editado</string>
+    <string name="participante_creado">Participante agregado</string>
 </resources>
