--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="titulo_dialog">Solicitud de permisos</string>
     <string name="solicitud_permiso_foto">Para poder capturar una foto es necesario que le des los permisos necesarios a la aplicación.</string>
     <string name="cargar_imagen">Cargar Foto</string>
+    <string name="sms_msg">\"Te he agregado a un evento como participante!\"</string>
 </resources>
