--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="emtpy_msg_division_gastos">Aún no has dividido los gastos del evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
     <string name="emtpy_msg_eventos">Aún no has creado ningun evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
     <string name="emtpy_msg_tareas">Aún no has creado tareas para el evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
+    <string name="emtpy_msg_participantes">Aún no has añadido participantes al evento. Para hacerlo, haz click en el botón flotante en la esquina inferior derecha.</string>
     <string name="agregar_gasto">Agregar gasto</string>
     <string name="gastos_actuales_de_la_tarea">Gastos actuales de la tarea:</string>
     <string name="no_hay_tareas_msg_error">Aún no hay tareas en el evento!</string>
